Latest version of MochiDB paper

--- a/paper/MochiDB/mochiDB.bib
+++ b/paper/MochiDB/mochiDB.bib
@@ -1,12 +1,11 @@
 @Article {CAP_theorem,
-author= "Seth Gilbert and Nancy Lynch",
-title = "Perspectives on the CAP Theorem",
-journal = "ACM SIGACT News",
-volume = "33 Issue 2",
-pages =  "51–-59",
-year = "2002",
-DOI =
-"https://groups.csail.mit.edu/tds/papers/Gilbert/Brewer2.pdf"
+  author= "Seth Gilbert and Nancy Lynch",
+  title = "Perspectives on the CAP Theorem",
+  journal = "ACM SIGACT News",
+  volume = "33 Issue 2",
+  pages =  "51–-59",
+  year = "2002",
+  DOI = "https://groups.csail.mit.edu/tds/papers/Gilbert/Brewer2.pdf"
 }
 
 @Article { Dynamo,
@@ -57,4 +56,14 @@ DOI="http://www.scs.stanford.edu/17au-cs244b/sched/readings/dynamo.pdf",
     year ="2006"
 }
 
+@misc{Repository,
+    title = {{Repository}},
+    author="Tigran Tsaturyan and Saravanan Dhakshinamurthy",
+    howpublished = {\url{https://github.com/saravan2/mochi-db/}}
+}
 
+@misc{DockerHub,
+    title = {{DockerHub}},
+    author="Tigran Tsaturyan and Saravanan Dhakshinamurthy",
+    howpublished = {\url{https://hub.docker.com/r/mochidb/mochi-db/}}
+}
