--- a/paper/MochiDB/mochiDB.tex
+++ b/paper/MochiDB/mochiDB.tex
@@ -76,7 +76,7 @@ Communication between participants (clients and servers) occurs via messages. Mo
 MochiDB is built to tolerate byzantine failures with some of the servers in the cluster experiencing stop failures, while others return arbitrary data, no data or malicious data intended to corrupt the distributed datastore. Such requirement intuitively means that more servers will be required to maintain consistency compared to non-BFT version. The relationship between number of servers and number of faulty servers (or faulty replicas) is described using the following equation:
 $N = 3*f + 1$  where N is number of servers required (*without any sharding - see section later) and f is the presumed number of faulty servers.
 
-Due to the nature of BFT protocol, we have to store relatively large metadata for any object in our datastore. For example, we store WriteCertificate which is the union of all write Grants given to that object. Such large metadata can be of significant overhead and require additional storage. Moreover, a very large datastore might not fit into a single MochiDB server. To solve those issues, we introduced sharding - the possibility to split data across different machines. We present sharding more in depth in the subsequent sections. Nonetheless in a nutshell, we shard by keys when apply known and fixed hash function that maps key universe into hash outcome universe. Our hash outcome is 32-bit signed integer, which can be viewed as a ring, starting with 0x0 and ending at 0xFFFFFFFF. That ring is split into equal size partitions by tokens. We assign each server some set of tokens. With that scheme, during write the client talks to subset of servers which relates to specified key. 
+Due to the nature of BFT protocol, we have to store relatively large metadata for any object in our datastore. For example, we store writeC which is the union of all write Grants given to that object. Such large metadata can be of significant overhead and require additional storage. Moreover, a very large datastore might not fit into a single MochiDB server. To solve those issues, we introduced sharding - the possibility to split data across different machines. We present sharding more in depth in the subsequent sections. Nonetheless in a nutshell, we shard by keys when apply known and fixed hash function that maps key universe into hash outcome universe. Our hash outcome is 32-bit signed integer, which can be viewed as a ring, starting with 0x0 and ending at 0xFFFFFFFF. That ring is split into equal size partitions by tokens. We assign each server some set of tokens. With that scheme, during write the client talks to subset of servers which relates to specified key. 
 
 MochiDB supports dynamic configuration changes. User Client with special privileges can add and remove servers without shutting down the system. But during transition phase, read and write operations are put on hold.
 
@@ -109,7 +109,7 @@ StoreValueObjectContainer contains the following data inside it:
   \item  \textit{key} - string key for faster lookups
   \item  \textit{valueAvailable} - boolean property which indicates whether value is available. Non initialized or deleted keys will have valueAvailable set to false
   \item \textit{writeGrants} - list of hashmaps $\langle integer, writeGrant \rangle$. HashMap maps timestamp (TS) to write grant given on that timestamp. Such hashmap is one per epoch (see section \ref{Protocol_Writes}). DoubleLinked list keep hashmaps sorted by epoch.
-  \item \textit{writeCertificate} - current write certificate for that object - i.e. signed collection of grants by different servers
+  \item \textit{writeC} - current write certificate for that object - i.e. signed collection of grants by different servers
 \end{itemize}
 
 \subsection{Model}
@@ -172,7 +172,7 @@ UpToSpeed & Client/Server & Suggest replica to load latest data \\ \hline
 \end{table}
 
 \subsection{Reads}
-Reads are initiated by client and their purpose is to read objects. Client creates read transaction and send readToServer message $\langle ReadToServer,\ transaction,\ nonce \rangle$ to all servers, where nonce is secure random number of uniquely identify request and avoid replay. Each of the servers reply back with readAns $\langle ReadAns,\ transactionResult,\ nonce \rangle$, where transactionResult contains list of OperationResult - one per each read operation. OperationResult has the format of ${result,\ currentCertificate, existed}$, where $result$ - string result of that operation, $existed$ boolean indicator whether such value existed and $currentCertificate$ is the current write certificate for that object.
+Reads are initiated by client and their purpose is to read objects. Client creates read transaction and send readToServer message $\langle ReadToServer,\ transaction,\ nonce \rangle$ to all servers, where nonce is secure random number of uniquely identify request and avoid replay. Each of the servers reply back with readAns $\langle ReadAns,\ transactionResult,\ nonce \rangle$, where transactionResult contains list of OperationResult - one per each read operation. OperationResult has the format of ${result,\ currentC, existed}$, where $result$ - string result of that operation, $existed$ boolean indicator whether such value existed and $currentC$ is the current write certificate for that object.
 Client waits for $f+1$ matching responses and if found, return $transactionResult$. If matches were not found, that indicates that some servers are not yet up to date. In that case, the client issues a message, asking server with older TS to bring it up to speed with other replicas. After a small wait time, the client retries the READ.
 There is a risk that frequently updated keys will starve reads as there will be no quorum on the latest data. We assume that such possibility is low considering the use-case of our system but nonetheless we propose remedy for that - reading old stable data. Since the client has certificates for each conflicting object, it can downgrade object TS and perform read and that particular timestamp. That functionality put some implications on garbage collection and logic to bring servers up to speed and hence was left for the future work.
 
@@ -180,17 +180,17 @@ There is a risk that frequently updated keys will starve reads as there will be 
 Write are initiated by the client and their purpose is to modify the state of objects. Writes are the challenging part of the protocol as concurrent modification of the same object needs to be coordinated. Some systems solve that issue by executing conflict resolution using agreement based BFT, which significantly increment number of messages \cite{HQ_replication}. In addition, while contention resolution is being processed, servers are frozen and do not serve requests \cite{HQ_replication}. Some other systems use dedicated primary and rotate it if selected one is faulty \cite{Practical_BFT}. Such system also suffers from number of messages and extra processing time for view change.
 MochiDB uses randomness when performing write transaction thus significantly reducing the probability of collision and hence contention resolution. When collision happens, clients simply retry transaction with a new random seed number. That mechanism is described in details in section \ref{write_contension}. For now, let's see how write is processed without any contention.
 
-Client initiate write transaction and send write1ToServer message $\langle Write1ToServer,\ transaction,\ transactionHash,\ subEpoch \rangle$ to all servers, where $transaction$ contains just the keys as values are unnecessary in the write1 phase, $transactionHash$ is the hash value calculated for the entire transaction including value (excluding value in case of delete) that will be stored in servers to authenticate the subsequent $Write2ToServer$ that will contain the complete key, value payload, $subEpoch$ is the random seed, a number within 0-1000 range alluded earlier in this paper. As the value payload will be sent later, $transactionHash$ is invaluable for servers to catch malicious clients who could flip the payload after aquiring a Write1Grant, by including it in the Write1Grant. Upon receiving write1 message, each server checks whether for each object there is already grant for timestamp $objectNextEpoch + subEpoch$, where $objectNextEpoch$ is the next timestamp epoch for that object and $subEpoch$ is the number it got from the client. MochiDB uses unsigned long format for timestamps. Each timestmap consist of epoch and numbering within epoch. We allocate 0-1000 for numbering within each epoch and the rest for epoch. For example, TS=4342 contains of epoch 4 (or equivalently, 4xxxx) and 342 as number within epoch. If timestamp is not granted to any other client, server creates write grant in form $\langle objectId, timestamp \rangle$. Grant is permission for that client to perform write operation on object X at specifies timestamp. Grants are not revocable - once granted, they can be executed at any point later on. Grants for all objects within transaction are unified under multiGrant and stored in the server so that the Server does not issue write1 grants to other clients and transactions overlapping our objects in the same timestamp. After stably storing multiGrant, server sends back write1ok message $\langle\ Write1OkFromServer,\ multiGrant,\ currentCertificates \rangle$ where $currentCertificates$ is hashmap mapping each object to its current certificate.
+Client initiate write transaction and send write1ToServer message $\langle Write1ToServer,\ transaction,\ txnHash,\ subEpoch \rangle$ to all servers, where $transaction$ contains just the keys as values are unnecessary in the write1 phase, $txnHash$ is the hash value calculated for the entire transaction including value (excluding value in case of delete) that will be stored in servers to authenticate the subsequent $Write2ToServer$ that will contain the complete key, value payload, $subEpoch$ is the random seed, a number within 0-1000 range alluded earlier in this paper. As the value payload will be sent later, $txnHash$ is invaluable for servers to catch malicious clients who could flip the payload after aquiring a Write1Grant, by including it in the Write1Grant. Upon receiving write1 message, each server checks whether for each object there is already grant for timestamp $objectNextEpoch + subEpoch$, where $objectNextEpoch$ is the next timestamp epoch for that object and $subEpoch$ is the number it got from the client. MochiDB uses unsigned long format for timestamps. Each timestmap consist of epoch and numbering within epoch. We allocate 0-1000 for numbering within each epoch and the rest for epoch. For example, TS=4342 contains of epoch 4 (or equivalently, 4xxxx) and 342 as number within epoch. If timestamp is not granted to any other client, server creates write grant in form $\langle objectId, timestamp \rangle$. Grant is permission for that client to perform write operation on object X at specifies timestamp. Grants are not revocable - once granted, they can be executed at any point later on. Grants for all objects within transaction are unified under multiGrant and stored in the server so that the Server does not issue write1 grants to other clients and transactions overlapping our objects in the same timestamp. After stably storing multiGrant, server sends back write1ok message $\langle\ Write1OkFromServer,\ multiGrant,\ currentC \rangle$ where $currentC$ is hashmap mapping each object to its current certificate.
 
-The client waits for $2f+1$ matching responses and construct $writeCertificate$ out of received multiGrants and send $\langle Write2ToServer,\ writeCertificate,\ transaction \rangle$ message to all servers. Servers processing Write2 message will verify whether the $writeCertificate$ contains $2f+1$ grants with consistent timestamps, calculate transaction Hash based on the complete $transaction$ and verify it with $transactionHash$ passed on Write1 phase, if all criteria are met, the Servers commit changes, save provided $writeCertificate$ as $currentCertificate$ for each object and delete the stably stored, corresponding write1Grant issued earlier in Write1 phase; the objects themselves might move to a new epoch if necesssary at the end of Write2 phase, more on that in the next section. If the Server finds a discrepancy in transactionHash or writeCertificate, the server rejects write2 operation and allows for the client to . In write2 phase, each server sends $Write2ack$ message with current state of object. The client can conculde the transaction is committed when it receives $2f+1$ matching $Write2ack$
+The client waits for $2f+1$ matching responses and construct $writeC$ out of received multiGrants and send $\langle Write2ToServer,\ writeC,\ transaction \rangle$ message to all servers. Servers processing Write2 message will verify whether the $writeC$ contains $2f+1$ grants with consistent timestamps, calculate transaction Hash based on the complete $transaction$ and verify it with $txnHash$ passed on Write1 phase, if all criteria are met, the Servers commit changes, save provided $writeC$ as $currentC$ for each object and delete the stably stored, corresponding write1Grant issued earlier in Write1 phase; the objects themselves might move to a NewEpoch if necesssary at the end of Write2 phase, more on that in the next section. If the Server finds a discrepancy in txnHash or writeC, the server rejects write2 operation and allows for the client to . In write2 phase, each server sends $Write2ack$ message with current state of object. The client can conculde the transaction is committed when it receives $2f+1$ matching $Write2ack$
 
 If that grant with specified timestamp for object already exists, MochiDB checks whether clientId matches. If clientId matches, that is just retry of the same message and old result is returned. If clientId does not match that means that grant was given to somebody else and hence server sends back
-$\langle\ Write1RefusedFromServer,\ currentCertificates,\\ availableSubEpochs\rangle$
+$\langle\ Write1RefusedFromServer,\ currentC,\\ availableSubEpochs\rangle$
 
 
 \subsubsection{Write contention} \label{write_contension}
 It is likely that two concurrent transactions will run at the same time and we will need a mechanism to resolve contention. MochiDB server does not freeze read, write requests to perform contention resolution. The random seed passed as $subEpoch$ minimizes the probability of contention and if contention with concurrent transaction had happened nonetheless, it will ask client to retry with a $Write1RefusedFromServer$ message. On a key that is frequently written, it is possible for clients to receive grants with timestamps that don't match, in such scenarios, the client waits for short time and retries $Write1ToServer$ till it receives $2f+1$ grants with the same future timestamp to proceed to the next phase.
-Each exiting object contains $currentCertificate$ with timestamp inside it. That timestamp consists of epoch and numbering within the epoch - subEpoch. Object moves from one epoch to another when write2 message is received and write1 messages are assigned from nextEpoch. Intuitively, epoch change acts as a synchronization point between transactions - if two transactions run at the same time, objects they modify should be from the same epoch. If one transaction runs after another finished, object should belong to different epochs. Within each transaction different objects might be from different epochs, but subEpoch should be exactly the same. Diagram \ref{fig:epochs_view} visualize epoch timeline. 
+Each exiting object contains $currentC$ with timestamp inside it. That timestamp consists of epoch and numbering within the epoch - subEpoch. Object moves from one epoch to another when write2 message is received and write1 messages are assigned from nextEpoch. Intuitively, epoch change acts as a synchronization point between transactions - if two transactions run at the same time, objects they modify should be from the same epoch. If one transaction runs after another finished, object should belong to different epochs. Within each transaction different objects might be from different epochs, but subEpoch should be exactly the same. Diagram \ref{fig:epochs_view} visualizes epoch timeline. 
 
 \begin{figure*}
 \includegraphics[width=0.8\textwidth]{Epochs.png}
@@ -203,13 +203,13 @@ Each exiting object contains $currentCertificate$ with timestamp inside it. That
 When server executes write2 operations on old or current epoch, the following rule take affect:\\ If epoch of transaction T is less than current epoch - transaction will succeed, but no object will get modified. If epoch of T is the current epoch, but subEpoch is less that current committed subEpoch - Server does not modify the object, replies success along with most recent object value. If epoch of T is the current epoch, but subEpoch is large that current committed subEpoch - update current committed epoch, object write certificate, object value and return success. Such rules are enforced to allow for determinism if multiple commits happen within one epoch.
 
 \subsubsection{Epoch exhaustion}
-It is possible for too many concurrent writes exhaust 1000 range of numbers dedicated to it. If that happens, the clients can identify that and execute special protocol procedure which will start new epoch, without modifying current one.
+It is possible for too many concurrent writes exhaust 1000 range of numbers dedicated to it. If that happens, the clients can identify that and execute special protocol procedure which will start NewEpoch, without modifying current one.
 
 \subsection{Garbage Collection}
 MochiDB produces a lot of stored metadata (notably given Write1 grants) for every object in the datastore. To save disk space and prune expired Write1Grants, MochiDB uses Garbage Collection (GC). When performing GC, MochiDB treats objects independently. Each server runs a background thread that removes given Write1 Grants that were given 2 or more epochs before the current epoch. Recollect that we save Write1 Grant in server for every Object to avoid giving new Write1 Grant to a different transaction on the very same timestamp. As we have moved to newer epochs, the old write1 Grants are no longer needed as they had completed their purpose. Moreovoer, those expired Write1 Grants when cashed in future via Write2 will not lead to any object modifications. MochiDB server will recognize that the object timestamp acquired from its current certificate is greater than the grant timestamp in Write2 and therefore avoids modification of the object, as the object value had been superceded by clients with advanced timestamp grants. It responds back to late Write2 requests with Write2Ans that has the unmodified, latest object value.
 
 \subsection{Resync}
-Clients can detect slow mochiDB servers when they consistently issue write1 Grants that are from older epochs from the rest of the cluster. When alterted by a client with an $UptoSpeed$ operation, the slow mochiDB server acquires write locks on those objects so that all read, write operations pertaining to them stall and proceeds executes a special sync operation with an upto date mochiDB server identified by the client. This sync operation involves overwriting the identified set of objects' value, currentCertificate and given Wrie1 Grants to match those from the upto date server to complete the resync.
+Clients can detect slow mochiDB servers when they consistently issue write1 Grants that are from older epochs from the rest of the cluster. When alterted by a client with an $UptoSpeed$ operation, the slow mochiDB server acquires write locks on those objects so that all read, write operations pertaining to them stall and proceeds executes a special sync operation with an upto date mochiDB server identified by the client. This sync operation involves overwriting the identified set of objects' value, currentC and given Wrie1 Grants to match those from the upto date server to complete the resync.
 
 \subsection{Sharding}
 MochiDB supports sharding natively. Each key is mapped to some hash by known and fixed hash function. All of available space is divided into equally sized partitions using Q tokens. Since hash space is known and the number of partitions fixed, it’s trivial and deterministic to calculate those tokens.
@@ -263,7 +263,7 @@ During development we spun up virtual mochiDB server and client clusters within 
 \end{table}
 
 \section{Optimization}
-We have identified that using leases will greatly improve write performance across the cluster and the use of hashes to reduce size of messages will improve the overall throughput. We can minimize metadata overhead, by only storing Grants pertaining to an object from majority of MochiDB servers instead of the all encompasing $writeCertificate$, that contains majority grants for all objects involved in the transaction.
+We have identified that using leases will greatly improve write performance across the cluster and the use of hashes to reduce size of messages will improve the overall throughput. We can minimize metadata overhead, by only storing Grants pertaining to an object from majority of MochiDB servers instead of the all encompasing $writeC$, that contains majority grants for all objects involved in the transaction.
 
 \section{Conclusion}
 In this paper we presented MochiDB - distributed, consistent, BFT key value store which is intended to work over high latency communication network. Our testing showed that MochiDB is a viable product that can work well for the situations with high read requests and moderate write requests. Our work is the first attempt to build a production ready BFT datastore for configuration management. In building MochiDB, we applied several enhancements to quorum based protocol including introduction of random write seeds and epochs to minimize contention resolution costs on the server.
@@ -271,6 +271,7 @@ In this paper we presented MochiDB - distributed, consistent, BFT key value stor
 {\footnotesize \bibliographystyle{acm}
 \bibliography{mochiDB}}
 \end{document}
+
 
 
 
